// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="css-100s56b"
      role="button"
    >
      Option A
    </span>
    <label
      class="css-xklln0"
    >
      <input
        class="css-1r71f0z toggle-input"
        type="checkbox"
      />
      <div
        class="css-d8rk4r toggle-handle"
      >
        <span
          class="css-qdjttl"
        />
      </div>
    </label>
    <span
      class="css-1sk4zio"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="css-y3yl2d"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <label
      class="css-irspe1"
      disabled=""
    >
      <input
        class="css-1r71f0z toggle-input"
        disabled=""
        type="checkbox"
      />
      <div
        class="css-d8rk4r toggle-handle"
      >
        <span
          class="css-1nye29f"
          disabled=""
        />
      </div>
    </label>
    <span
      class="css-7lll1s"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="css-1ru5kr2"
      role="button"
    >
      Option A
    </span>
    <label
      class="css-xklln0"
    >
      <input
        class="css-1r71f0z toggle-input"
        type="checkbox"
      />
      <div
        class="css-d8rk4r toggle-handle"
      >
        <span
          class="css-qdjttl"
        />
      </div>
    </label>
    <span
      class="css-r1fv2b"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="css-1588dqn"
      role="button"
    >
      Option A
    </span>
    <label
      class="css-1uxo3sa"
    >
      <input
        class="css-1r71f0z toggle-input"
        type="checkbox"
      />
      <div
        class="css-10kxbe9 toggle-handle"
      >
        <span
          class="css-i4koh4"
        />
      </div>
    </label>
    <span
      class="css-noruk0"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
